--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -48,6 +48,12 @@ h1 {
     margin-top: 2rem;
 }
 
+#output {
+    border-color: rgb(255, 255, 255);
+    color:rgb(255, 255, 255);
+    box-shadow: 5px 5px 5px rgb(0, 0, 0);
+}
+
 /* Container Styles */
 
 .transbox {
