--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -1,7 +1,10 @@
 /* General Styles */
 
 body {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Jersey 20", sans-serif;
+    font-size: 21px;
+    font-weight: 200;
+    font-style: normal;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -28,6 +31,9 @@ h1 {
     padding: 1rem 2rem;
     font-size: 1rem;
     font-weight: bold;
+    font-family: "Jersey 20", sans-serif;
+    font-weight: 200;
+    font-style: normal;
     text-transform: uppercase;
     color: #fff;
     background-color: #000;
