--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -1,8 +1,8 @@
 /* General Styles */
 
 body {
-    font-family: "Jersey 20", sans-serif;
-    font-size: 21px;
+    font-family: "Gothic A1", sans-serif;
+    font-size: 16px;
     font-weight: 200;
     font-style: normal;
     margin: 0;
