Finally started expanding the project to cover more cities

--- a/css/tre.css
+++ b/css/tre.css
@@ -5,6 +5,7 @@ body {
     font-size: 16px;
     font-weight: 200;
     font-style: normal;
+    color:rgb(85, 245, 170);
     margin: 0;
     padding: 0;
     text-align: center;
