--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
     font-size: 16px;
     font-weight: 200;
     font-style: normal;
+    color:rgb(88, 246, 172);
     margin: 0;
     padding: 0;
     text-align: center;
